deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airline-satisfaction-service
spec:
  selector:
    app: airline-satisfaction
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
