deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airline-satisfaction-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - airline-satisfaction.lab.sspcloud.fr
  rules:
  - host: airline-satisfaction.lab.sspcloud.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: airline-satisfaction-service
            port:
              number: 80
